@@ -2,3 +2,10 @@
 Spring20231015
 # Eclipse / STS XML 配置設定
 https://blog.csdn.net/qq_55886104/article/details/133310306
+
+# 執行時要加入: JVM 啟動參數
+<pre>
+允許 Java 9 以上版本使用反射(java.lang.reflect)內部 API
+--add-opens java.base/java.lang=ALL-UNNAMED
+</pre>  
+
